
===================
Version 7.x-3.x-dev
===================


Starting new branch with a total rework of Calendar, using a Views pager plugin for the back/next navigation, 
a row plugin to explode the view results into calendar day items, and a style plugin to disply the results in a calendar.

======================
Version 7.x-3.0-alpha1
======================

Initial release of 7.3 branch.

- Issue #1227128 The ical feed needs to have a '.ics' extension on it.
- The ical icon was not attaching to block views.
- The row plugin needs to clone the node before altering it, or other views on the same page that use the same node will acquire things like the 'date_id' that the row plugin is setting.
- Issue #1222770 Lighten the color of the date in month 'overflow' days so it is clearer that they are out of scope for the view.
- Issue #1223500 Fix the day link in the year view to point to the day view rather than the year view.
- Add the date sort field to the default view so upcoming events sort correctly.
- Change the default setting for the day view and make sure that the style does not try to create overlap items if it is missing the groupby value (which the default view was doing.)
- Issue #1168672 Temporary workaround for missing date info in calendar style. Still need a smarter fix.
- Issue #1222736 Fix export errors caused when previous export fix of using export plugins got broken by changes in Views.
- Set default day view to use agenda style.
- Add back calendar_remove() function used by Date Tools to remove default calendars.
- Re-arrange the default view so the month is first.
- Fix granularity setting in row so it works right for both field dates and system dates.
- Fix broken ical field options field.
- Fix broken ical icon.
- Adding a calendar-links class to make theming easier.
- Fix broken day overlap theme template.
- Fix some granularity handling, note that all calendar row plugins must provide a date_id value.