@@ -15,6 +15,7 @@ Version 7.x-3.0-alpha1
 
 Initial release of 7.3 branch.
 
+- Get colorpicker working again with an assist from the Examples module Field example.
 - Issue #1227128 The ical feed needs to have a '.ics' extension on it.
 - The ical icon was not attaching to block views.
 - The row plugin needs to clone the node before altering it, or other views on the same page that use the same node will acquire things like the 'date_id' that the row plugin is setting.
